--- a/CarteVizita.html
+++ b/CarteVizita.html
@@ -15,8 +15,8 @@
         <img src="./American-psycho-patrick-bateman-removebg-preview.png" alt="iconita" width="30" height="24" class="d-inline-block align-text-top">
         Patrick Bateman
     </a>
-    <div style="display: flex;">
-      <div style="flex-grow: 1;"></div>
+    <div>
+      <div></div>
       <div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -49,9 +49,9 @@
   <h1>PAGINA DE CONTACT</h1>
   <h4>Pentru a putea lua legatura cu mine puteti sa sunati in timpul orelor de lucru la:</h4>
   <ul>
-    <li>Numarul de Telefon 212.555.6342</li>
-    <li>Fax 212.555.6390</li>
-    <li>Telex 10.4534</li>
+    <li id="li">Numarul de Telefon 212.555.6342</li>
+    <li id="li">Fax 212.555.6390</li>
+    <li id="li">Telex 10.4534</li>
   </ul>
   <h5>Sau puteti sa veniti la biroul de pe Wall Street  adresa:</h5>
     <p> 358 Exchange Place New York, N.Y 10099</p>
