--- a/CineSunt.html
+++ b/CineSunt.html
@@ -46,7 +46,7 @@
   </nav>
 <body>
   <div class="fixed-bg2"></div>
-  <h1> Analiza Patrick Bateman</h1>
+  <h1 style="margin-top: 20px;"> Analiza Patrick Bateman</h1>
   <div>
     <p>Patrick Bateman este protagonistul principal titular al romanului controversat American Psycho al lui Bret Easton Ellis din 1991 și al adaptărilor sale cinematografice și scenice, precum și un antagonist postum în simularea metaficțională de memorii Lunar Park și antagonistul general postum din continuarea non-canon a acestuia.</p>
     <p>Este un om de afaceri în anii 1980 care locuiește în Manhattan și lucrează la Wall Street. Însuși imaginea unui yuppie, el este obsedat de sănătatea, curățenia, aspectul, banii și colecția de muzică; cu toate acestea, el are o latură mai întunecată, deoarece este și ucigaș în serie, violator, canibal și necrofil.În filmul din 2000, el a fost interpretat de Christian Bale,</p>
@@ -117,6 +117,7 @@
     Am toate caracteristicile unei ființe umane: carne, sânge, piele, păr; dar nici o singură emoție, clară, identificabilă, cu excepția lăcomiei și a dezgustului. Ceva oribil se întâmplă în interiorul meu și nu știu de ce. Pofta mea de sânge de noapte a debordat în zilele mele. Mă simt letal, în pragul freneziei. Cred că masca mea de sănătate este pe cale să scape. 
     ~ Patrick Bateman.
   </p>
+  <p style="margin-bottom: 50px;">
     Exista o idee despre un Patrick Bateman, un fel de abstractizare — dar nu există eu adevărat; doar o entitate, ceva iluzoriu... și deși îmi pot ascunde privirea rece, iar tu poți să-mi strângi mâna și simți carnea strângând-o pe a ta și poate poți chiar simți că stilurile noastre de viață sunt probabil comparabile: eu pur și simplu... nu sunt... . Acolo. 
     ~ Infamul solilocviu al lui Patrick Bateman.
   </p>
